--- a/development/web/css/reset.css
+++ b/development/web/css/reset.css
@@ -5,6 +5,16 @@
   Date & Time  - 04/08/2024 - 15:26:48
 / ==================================================== */
 
+*, body {
+	margin: 0;
+	padding: 0;
+	font-size: 16px;
+}
+
+*, *::before, *::after {
+	box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -22,4 +32,9 @@ img {
 	background-repeat: no-repeat;
 	background-size: cover;
 	shape-margin: 1rem;
+}
+
+a, a:hover, a:visited {
+	text-decoration: none;
+	color: inherit;
 }
