--- a/development/web/css/reset.css
+++ b/development/web/css/reset.css
@@ -5,13 +5,16 @@
   Date & Time  - 04/08/2024 - 15:26:48
 / ==================================================== */
 
-*, body {
+*,
+body {
 	margin: 0;
 	padding: 0;
 	font-size: 16px;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
 	box-sizing: border-box;
 }
 
@@ -34,7 +37,14 @@ img {
 	shape-margin: 1rem;
 }
 
-a, a:hover, a:visited {
+ul,
+ol {
+	list-style: none;
+}
+
+a,
+a:hover,
+a:visited {
 	text-decoration: none;
 	color: inherit;
 }
